--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Feb 02 11:03:23 KST 2021
-sdk.dir=C\:\\Users\\LordRoid\\AppData\\Local\\Android\\Sdk
+#Mon Sep 20 18:15:58 KST 2021
+sdk.dir=C\:\\Users\\speed\\AppData\\Local\\Android\\Sdk
